[package]
name = "xv7-bootloader-uefi"
version = "0.1.0"
authors = ["imtsuki <me@qjx.app>"]
description = "XV7 UEFI Bootloader"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.4.3", features = ["exts"] }
uefi-services = "0.2.1"
x86_64 = "0.8.3"
zeroize = "1.1.0"
goblin = { version = "0.2.0", default-features = false, features = ["elf32", "elf64", "mach32", "mach64", "pe32", "pe64", "archive", "endian_fd"] }
log = { version = "0.4.8", default-features = false }
chrono = { version = "0.4.10", default-features = false }
bootinfo = { path = "../xv7-bootinfo", package = "xv7-bootinfo" }
