[package]
name = "xv7-kernel"
version = "0.1.0"
authors = ["imtsuki <me@qjx.app>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
embedded-graphics = { version = "0.6.0-alpha.3", features = ["bmp"] }
bitvec = { version = "0.17.2", default-features = false, features = ["atomic"] }
vte = "0.6.0"
spin = "0.5.2"
boot = { path = "../xv7-boot", package = "xv7-boot" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.8.3"
uart_16550 = "0.2.2"

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = "2.9.0"
