[package]
name = "xv7-kernel"
version = "0.1.0"
authors = ["imtsuki <me@qjx.app>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
embedded-graphics = { version = "0.6.1" }
tinybmp = { version = "0.2.2", features = [ "graphics" ]}
bitvec = { version = "0.17.4", default-features = false, features = ["atomic"] }
vte = "0.7.1"
spin = "0.5.2"
linked_list_allocator = "0.8.2"
boot = { path = "../xv7-boot", package = "xv7-boot" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.9.6"
uart_16550 = "0.2.4"
uefi = "0.4.4"
cpuid =  { package = "raw-cpuid", version = "7.0.3", features = ["use_arch"] }
pc-keyboard = "0.5.0"

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = "2.9.0"
