[package]
name = "xv7-kernel"
version = "0.1.0"
authors = ["imtsuki <me@qjx.app>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
embedded-graphics = { version = "0.6.2" }
tinybmp = { version = "0.2.2", features = [ "graphics" ]}
bitvec = { version = "0.17.4", default-features = false, features = ["atomic"] }
vte = "0.7.1"
spin = "0.9.0"
linked_list_allocator = "0.8.11"
goblin = { version = "0.4.0", default-features = false, features = ["elf32", "elf64", "mach32", "mach64", "pe32", "pe64", "archive", "endian_fd"] }
zeroize = "1.1.0"
boot = { path = "../xv7-boot", package = "xv7-boot" }
usyscall = { path = "../xv7-usyscall", package = "xv7-usyscall" }
crossbeam-queue = { version = "0.2.1", default-features = false, features = ["alloc"] }

[features]
default = ["frame-allocator-bitmap"]
frame-allocator-bitmap = []
frame-allocator-buddy = []

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14.0"
uart_16550 = "0.2.12"
uefi = "0.8.0"
raw-cpuid = "9.0.0"
pc-keyboard = "0.5.0"

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = "2.9.0"
